<resources>
    <string name="app_name">MinhaProva</string>
    <string name="botao1">Botão 1</string>
    <string name="botao2">Botão 2</string>
    <string name="botao3">Botão 3</string>
    <string name="botao4">Botão 4</string>
    <string name="ok">OK</string>
    <string name="cancela">Cancelar</string>
    <string name="digite_algo_aqui">Digite algo aqui</string>
    <string name="digite_algo">Digite algo</string>
    <string name="text_view_1">Text view 1</string>
    <string name="text_view_2">Text view 2</string>
    <string name="titulo">Título:</string>
    <string name="autor">Autor:</string>
    <string name="ano">Ano:</string>
    <string name="nota">Nota:</string>
    <string name="salvar">Salvar</string>
    <string name="anterior">Anterior</string>
    <string name="proximo">Próximo</string>
    <string name="sair">Sair</string>
</resources>